@@ -15,7 +15,7 @@
 		<java.version>21</java.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
-		<lombok.version>1.18.32</lombok.version>
+		<lombok.version>1.18.42</lombok.version>
 	</properties>
 		  <dependencies>
 			<!-- Web -->
@@ -86,6 +86,7 @@
 			<dependency>
 			  <groupId>org.projectlombok</groupId>
 			  <artifactId>lombok</artifactId>
+			  <version>${lombok.version}</version>
 			  <optional>true</optional>
 			</dependency>
 
@@ -111,6 +112,14 @@
 
 		  <build>
 			<plugins>
+					  <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+						  <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+						</configuration>
+					  </plugin>
+
 			  <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
